# pretty-simple

./: Cargo.toml  README.md
src/: lib.rs
src/tests/: exp.rs  mod.rs  unit_tests.rs  xml.rs
src/tests/snapshots/: pretty_simple__tests__exp__tests__app_left_compact.snap  pretty_simple__tests__exp__tests__app_left_pretty.snap  pretty_simple__tests__exp__tests__app_right_compact.snap  pretty_simple__tests__exp__tests__app_right_pretty.snap  pretty_simple__tests__exp__tests__id_compact.snap  pretty_simple__tests__exp__tests__id_pretty.snap  pretty_simple__tests__exp__tests__let_nested_lambda_compact.snap  pretty_simple__tests__exp__tests__let_nested_lambda_pretty.snap  pretty_simple__tests__exp__tests__let_simple_compact.snap  pretty_simple__tests__exp__tests__let_simple_pretty.snap  pretty_simple__tests__exp__tests__wide_compact.snap  pretty_simple__tests__exp__tests__wide_pretty.snap  pretty_simple__tests__unit_tests__column.snap  pretty_simple__tests__unit_tests__nesting.snap  pretty_simple__tests__xml__tests__t1_compact.snap  pretty_simple__tests__xml__tests__t1_pretty.snap  pretty_simple__tests__xml__tests__t2_compact.snap  pretty_simple__tests__xml__tests__t2_pretty.snap  pretty_simple__tests__xml__tests__t3_compact.snap  pretty_simple__tests__xml__tests__t3_pretty.snap  pretty_simple__tests__xml__tests__t4_compact.snap  pretty_simple__tests__xml__tests__t4_pretty.snap  pretty_simple__tests__xml__tests__t5_compact.snap  pretty_simple__tests__xml__tests__t5_pretty.snap  pretty_simple__tests__xml__tests__t6_compact.snap  (+5 more)
